--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="keywords" content="HTML5 Template Buka onepage themeforest" />
-    <meta name="description" content="Buka - Onepage Multi-Purpose HTML5 Template" />
+    <meta name="keywords" content="Shivang Mistry" />
+    <meta name="description" content="Shivang Mistry" />
     <meta name="author" content="" />
 
     <!-- Title  -->
