--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                     <a href="img/portfolio/4.jpg" class="popimg">
                                         <span class="icon ti-zoom-in"></span>
                                     </a>
-                                    <a href="#0">
+                                    <a href="https://github.com/shiv246/MoleculAI">
                                         <span class="icon ti-link"></span>
                                     </a>
                                 </div>
@@ -257,7 +257,7 @@
                                     <a href="img/portfolio/3.jpg" class="popimg">
                                         <span class="icon ti-zoom-in"></span>
                                     </a>
-                                    <a href="#0">
+                                    <a href="https://github.com/shiv246/MalariaDetector">
                                         <span class="icon ti-link"></span>
                                     </a>
                                 </div>
