--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                                 <a href="#0"> </a>
 
                             </div>
-                            <h6><a href="https://us20.campaign-archive.com/?u=dc345fd46b108aa25f817c345&id=16c1ff6c37">January/February 2020</a></h6>
+                            <h6><a href="https://mailchi.mp/62be5a5663a8/shivangs-october-newsletter-510654?e=[UNIQID]">January/February 2020</a></h6>
                             <p>This month, I participated in another TKS hackathon and won 3rd place! I also gave a presentation expalining Project MolculAI. </p>
                         </div>
                     </div>
