--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 
                             </div>
                             <h6><a href="https://mailchi.mp/62be5a5663a8/shivangs-october-newsletter-510654?e=[UNIQID]">January/February 2020</a></h6>
-                            <p>This month, I participated in another TKS hackathon and won 3rd place! I also gave a presentation expalining Project MolculAI. </p>
+                            <p>This month, I participated in another TKS hackathon and won 3rd place! I also gave a presentation explaining Project MolculAI. </p>
                         </div>
                     </div>
                 </div>
