--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                             that the future generation takes action on what needs to be done.
                         </p>
                         <p>I'm a 16-year-old innovator on the journey to impact billions and taking on the world's biggest problems head-on. I'm currently specializing in AI and looking into how deep learning can play a role in the healthcare industry. </p>
-
-
+			<a href="https://www.notion.so/Personal-Core-Values-4242ae9efc9f4bfa8f69c938d24014f4" class="butn mt-30" data-scroll-nav="6">Read about my personal values</a>
+			
 
                     </div>
                 </div>
