--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                         <span class="cd-words-wrapper">
                               <b class="is-visible">Shivang Mistry</b>
                               <b>an AI Developer</b>
-                              <b>a High School Student</b>
-                              <b>a TKS Innovator</b>
+                              <b>a UofT EngSci student</b>
+                              <b>a TKS Activator</b>
                             </span>
                     </h1>
                     <p>A I + M e d i c i n e</p>
@@ -145,10 +145,10 @@
                     <div class="content">
                         <h3>Hey there! 👋</h3>
                         <span> </span>
-                        <p class="mb-10">I'm passionate about technology and science and using it to solve the world's biggest problems. Living in a world where something is happening all the time, whether it be an epidemic, climate change, or poverty, I think it is time
-                            that the future generation takes action on what needs to be done.
+                        <p class="mb-10">I'm passionate about technology and science and using it to solve the world's biggest problems. Living in a world where something is happening all the time, whether it be an pandemic, climate change, or poverty, I think it is time
+                            that the youth takes action on what needs to be done.
                         </p>
-                        <p>I'm a 16-year-old innovator on the journey to impact billions and taking on the world's biggest problems head-on. I'm currently specializing in AI and looking into how deep learning can play a role in the healthcare industry. </p>
+                        <p>I'm a 18-year-old innovator on the journey to impact billions and take on the world's biggest problems head-on. I'm currently specializing in AI and looking into how deep learning can play a role in the healthcare industry. </p>
 			<a href="https://www.notion.so/Personal-Core-Values-4242ae9efc9f4bfa8f69c938d24014f4" class="butn mt-30">Read about my personal values</a>
 			
 
@@ -322,7 +322,7 @@
             <div class="row">
 
                 <div class="section-head text-center col-lg-12">
-                    <h3>Latest Newletters</h3>
+                    <h3>Some Previous Newletters</h3>
                     <span><i></i><i></i><i></i></span>
                 </div>
 
