--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             <div class="row">
 
                 <div class="section-head text-center col-lg-12">
-                    <h3>Some Previous Newletters</h3>
+                    <h3>Previous Newletters</h3>
                     <span><i></i><i></i><i></i></span>
                 </div>
 
@@ -501,26 +501,6 @@
         <div class="sub-footer">
             <div class="container">
                 <div class="row">
-
-                    <div class="col-lg-12">
-                        <div class="copy text-center">
-                            <div class="social">
-                                <a href="#0" class="icon">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a href="#0" class="icon">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                                <a href="#0" class="icon">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </a>
-                                <a href="#0" class="icon">
-                                    <i class="fab fa-behance"></i>
-                                </a>
-                                <a href="#0" class="icon">
-                                    <i class="fab fa-instagram"></i>
-                                </a>
-                            </div>
                             <p>&copy; 2020 Shivang Mistry. All Rights Reserved.</p>
                         </div>
                     </div>
